samples/_failures_safe/1761726037_8f4422_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_865c31b1.c: In function ‘main’:
./samples/SAFE/__tmp_865c31b1.c:155:9: error: expected expression at end of input
  155 |         {EVENT_DATA_READY, "hello",
      |         ^
./samples/SAFE/__tmp_865c31b1.c:155:9: error: expected declaration or statement at end of input
